使用mapper简化dto与assembler实现
