# pkg/query-service/domain/user/view/user_view.go
@@ -10,12 +10,14 @@ type UserView struct {
 	Email      string     `json:"email" bson:"email" `
 	Telephone  string     `json:"telephone" bson:"telephone" `
 	Address    string     `json:"address" bson:"address" `
+	Birthday   *time.Time `json:"birthday" bson:"birthday"`
 	CreateTime *time.Time `json:"createTime" bson:"createTime"`
 }
 
 func (u *UserView) GetTenantId() string {
 	return u.TenantId
 }
+
 func (u *UserView) GetId() string {
 	return u.Id
 }
