# pkg/query-service/userinterface/rest/user/dto/user_dto.go
@@ -1,6 +1,7 @@
 package dto
 
 import (
+	base "github.com/liuxd6825/dapr-go-ddd-example/pkg/query-service/infrastructure/base/userinterface/rest/dto"
 	"github.com/liuxd6825/dapr-go-ddd-sdk/types"
 )
 
@@ -13,18 +14,12 @@ type UserFindByIdRequest struct {
 	Id       string
 }
 
-func (r *UserFindByIdRequest) GetTenantId() string      { return r.TenantId }
-func (r *UserFindByIdRequest) SetTenantId(value string) { r.TenantId = value }
-
-func (r *UserFindByIdRequest) GetId() string      { return r.Id }
-func (r *UserFindByIdRequest) SetId(value string) { r.Id = value }
-
 //
 // UserFindByIdResponse
 // @Description:  请求内容
 //
 type UserFindByIdResponse struct {
-	UserResponseItem
+	UserDto
 }
 
 //
@@ -35,13 +30,10 @@ type UserFindAllRequest struct {
 	TenantId string
 }
 
-func (r *UserFindAllRequest) GetTenantId() string      { return r.TenantId }
-func (r *UserFindAllRequest) SetTenantId(value string) { r.TenantId = value }
-
 type UserFindAllResponse []*UserFindAllResponseItem
 
 type UserFindAllResponseItem struct {
-	UserResponseItem
+	UserDto
 }
 
 //
@@ -49,31 +41,8 @@ type UserFindAllResponseItem struct {
 // @Description:
 //
 type UserFindPagingRequest struct {
-	TenantId string
-	PageNum  int64
-	PageSize int64
-	Filter   string
-	Sort     string
-	Fields   string
+	base.FindPagingQuery
 }
-
-func (r *UserFindPagingRequest) GetTenantId() string      { return r.TenantId }
-func (r *UserFindPagingRequest) SetTenantId(value string) { r.TenantId = value }
-
-func (r *UserFindPagingRequest) GetPageNum() int64      { return r.PageNum }
-func (r *UserFindPagingRequest) SetPageNum(value int64) { r.PageNum = value }
-
-func (r *UserFindPagingRequest) GetPageSize() int64      { return r.PageSize }
-func (r *UserFindPagingRequest) SetPageSize(value int64) { r.PageSize = value }
-
-func (r *UserFindPagingRequest) GetFilter() string      { return r.Filter }
-func (r *UserFindPagingRequest) SetFilter(value string) { r.Filter = value }
-
-func (r *UserFindPagingRequest) GetSort() string      { return r.Sort }
-func (r *UserFindPagingRequest) SetSort(value string) { r.Sort = value }
-
-func (r *UserFindPagingRequest) GetFields() string      { return r.Fields }
-func (r *UserFindPagingRequest) SetFields(value string) { r.Fields = value }
 
 //
 // UserFindPagingResponse
@@ -90,21 +59,21 @@ type UserFindPagingResponse struct {
 }
 
 type UserFindPagingResponseItem struct {
-	UpdateTime *types.TimeString `json:"updateTime"`
-	UserResponseItem
+	UpdateTime *types.JSONTime `json:"updateTime"`
+	UserDto
 }
 
 //
-// UserResponseItem
+// UserDto
 // @Description:   请求业务数据
 //
-type UserResponseItem struct {
-	Id         string            `json:"id"`
-	TenantId   string            `json:"tenantId"`
-	UserCode   string            `json:"userCode"`
-	UserName   string            `json:"userName"`
-	Email      string            `json:"email"`
-	Telephone  string            `json:"telephone"`
-	Address    string            `json:"address"`
-	CreateTime *types.DateString `json:"createTime"`
+type UserDto struct {
+	Id         string          `json:"id"`
+	TenantId   string          `json:"tenantId"`
+	UserCode   string          `json:"userCode"`
+	UserName   string          `json:"userName"`
+	Email      string          `json:"email"`
+	Telephone  string          `json:"telephone"`
+	Address    string          `json:"address"`
+	CreateTime *types.JSONTime `json:"createTime"`
 }
